# web-scrapper

./: .gitignore  README.rst  pyproject.toml
src/web_scrapper/: LinkedInBot.py
